testsuite/tests/indexed-types/should_fail/SimpleFail9.stderr
SimpleFail9.hs:20:3: error: [GHC-95424]
    • Type indexes must match class instance head
      Expected: S7 (a, Int)
        Actual: S7 (b, Int)
    • In the associated data family instance declaration for ‘S7’
      In the instance declaration for ‘C7 Char (a, Int)’

